--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.security.user.name=user
 spring.security.user.password=password
+spring.datasource.url=jdbc:h2:mem:vasodb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
