--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.main.allow-circular-references=true
 spring.security.user.name=user
 spring.security.user.password=password
 spring.datasource.url=jdbc:h2:mem:vasodb
@@ -7,4 +8,5 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern=/swagger*
-
+logging.level.org.springframework.security=DEBUG
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
