--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.static-path-pattern=/swagger*
 logging.level.org.springframework.security=DEBUG
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+logging.level.root=INFO
+logging.level.com.example=DEBUG
