--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
         </dependency>
 
         <dependency>
+            <groupId>net.sourceforge.jFuzzyLogic</groupId>
+            <artifactId>jFuzzyLogic</artifactId>
+            <version>2.0.7</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/jfuzzylogic.jar</systemPath>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
